ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts.stderr
error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:5:9
  |
5 |     var {};
  |         ^^

error[1182]: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/emptyVariableDeclarationBindingPatterns02_ES5/input.ts:6:9
  |
6 |     let {};
  |         ^^

